# KappaProf

./: .gitignore  CMakeLists.txt  KernelProfilerConfig.cmake.in  LICENSE  README.md
demo/: CMakeLists.txt
demo/include/: csvhelper.hpp  kernel.hpp
demo/src/: main.cpp
include/: ErrorHandler.hpp  harness.hpp  kprof.hpp  profiler.hpp  utils.hpp
lib/cmake/KernelProfiler/: KernelProfilerConfig-debug.cmake  KernelProfilerConfig.cmake
src/: harness.cpp  kprof.cpp  profiler.cpp  utils.cpp
